# kanban-redirect-wasm

./: .gitignore  Cargo.toml  Makefile
react/: package-lock.json  package.json  webpack.config.js
react/app/: index.js  kanban-redirect.js
src/: .lib.rs.swp  lib.rs
