[package]
name = "tumblr-kanban-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.7"
chrono = "0.4.31"
chrono-tz = "0.8.5"
js-sys ="0.3.68"
reqwest = { version = "0.11.23", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"

[dependencies.web-sys]
version = "0.3.67"
features = [
    "Document",
    "FormData",
    "Location",
    "RequestInit",
    "Response",
    "UrlSearchParams",
    "Window",
]

[dev-dependencies]
regex = "1.10.2"
#reqwest = { version = "0.11.23", features = ["blocking", "json", "multipart"] }

[profile.release]
lto = true
